# fastapi_tryout2

./: main.py  pyproject.toml
