[tool.poetry]
name = "test"
version = "0.1.0"
description = "Backend logic implementation"
authors = ["Siva S <sivasubramani.612@gmaill.com"]
license = "MIT"

#[[tool.poetry.source]]
#name = 'tsinghua'
#url = 'https://pypi.tuna.tsinghua.edu.cn/simple'

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.9.1"
#gunicorn = "^19.9"
fastapi = "^0.44.1"
#passlib = {version = "^1.7",extras = ["bcrypt"]}
#pyjwt = "^1.7"
#alembic = "^1.0"
#python-slugify = "^3.0"
#Unidecode = "^1.0"
#python-dotenv = "^0.10.1"
#databases = "^0.2.1"
#motor = "^2.0"
#redis = "^3.3"
#aiohttp = "^3.6"
#boto3 = "^1.11.5"
#python-multipart = "^0.0.5"
#urllib3 = "^1.25.7"

[tool.poetry.dev-dependencies]
pytest = "*"
#[tool.black]
#exclued = '''
#/(
#    \.git
#  | \.hg
#  | \.mypy_cache
#  | \.tox
#  | \.venv
#  | _build
#  | buck-out
#  | build
#  | dist
#  | alembic
#)/
#'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"